# crewai-news-bias-agent-workflow

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/data-samples/immigration-arrests/: Breitbart-ice-arrests-Gemini_2.5_Pro_Preview_05-06.md  Breitbart-judge-arrested-Gemini_2.5_Pro_Preview_05-06.md  MotherJones-judge-arrested-Gemini_2.5_Pro_Preview_05-06.md
docs/exploratory-analysis/gender-bias/: Breitbart-gender-pay-gap-OpenAI-ChatGPT.md  MotherJones-family-policy-OpenAI-ChatGPT.md  MotherJones-judge-arrested-OpenAI-ChatGPT.md
docs/exploratory-analysis/immigration-arrests/: Breitbart-judge-arrested-Gemini_2.5_Pro_Preview_05-06.md
docs/test-cases/: test-cases.md
trust_and_bias_analysis/: crew.py  main.py  tools.py  utils.py
trust_and_bias_analysis/config/: agents.yaml  tasks.yaml
